# etl-studio

./: .gitignore  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml  mypy.ini  pyproject.toml  ruff.toml
.github/workflows/: ci.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_create_users_table.py  002_create_import_tables.py  003_create_import_records.py  004_mapping_and_draft.py  005_run_attempts_and_dlq.py  006_security_fields.py  007_schema_versioning.py  008_multi_tenant_orgs.py  009_s3_storage.py
backend/app/: __init__.py  config.py  db.py  main.py
backend/app/api/: admin.py  analytics.py  auth.py  compare.py  datasets.py  demo.py  health.py  invites.py  orgs.py  router.py  runs.py  schema.py
backend/app/core/: auth.py  celery_app.py  demo_seed.py  errors.py  logging.py  org_context.py  permissions.py  security.py  sse.py  storage.py  storage_backends.py
backend/app/models/: __init__.py  base.py  imports.py  orgs.py  user.py
backend/scripts/: reset_and_seed.py
docs/: architecture.md  demo-gif.md
docs/screenshots/: README.md
frontend/: Dockerfile  package-lock.json  package.json  playwright.config.ts
frontend/app/: layout.tsx
frontend/app/(app)/: layout.tsx
frontend/app/(app)/analytics/: page.tsx
frontend/app/(app)/datasets/: page.tsx
frontend/app/(app)/team/: page.tsx
frontend/app/demo/: page.tsx
frontend/app/invite/[token]/: page.tsx
frontend/app/login/: page.tsx
frontend/src/components/analytics/: ChannelBarChart.tsx  SpendByDayChart.tsx
frontend/src/components/demo/: DemoWalkthrough.tsx
frontend/src/components/org/: OrgSwitcher.tsx
frontend/src/components/runs/: RunErrorsPreview.tsx  RunEventLog.tsx
frontend/src/components/schema/: RulesEditor.tsx
frontend/src/components/ui/: Button.tsx  Input.tsx
frontend/src/features/analytics/: queries.ts
frontend/src/features/compare/: queries.ts
frontend/src/features/orgs/: queries.ts
frontend/src/lib/: api.ts  auth.tsx  download.ts  query-provider.tsx  sse.ts
frontend/tests/e2e/: compare-runs.spec.ts  import-flow.spec.ts
ops/: nginx.conf  otel-collector-config.yml
shared/: pyproject.toml
shared/app_shared/: __init__.py  config.py  db_sync.py  hash.py  otel.py
shared/app_shared/models/: __init__.py  base.py  imports.py  orgs.py  user.py
tests/fixtures/: sample.csv
tests/smoke/: smoke_import.py
worker/: Dockerfile  pyproject.toml  worker_main.py
worker/tasks/: __init__.py  import_run.py
(+8 files in other folders)
