[project]
name = "etl-studio"
version = "0.1.0"
description = "ETL Studio monorepo workspace (backend, worker, shared python package)."
requires-python = ">=3.12"
dependencies = []

[tool.uv.workspace]
members = ["shared", "backend", "worker"]

[build-system]
requires = ["uv_build>=0.9.5,<<0.10.0"]
build-backend = "uv_build"

